--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,24 +115,15 @@
     <string name="rate">Rate</string>
     <string name="rate_desc">If you like the Espresso app, please do rate it.</string>
     <string name="licenses">Licenses</string>
-    <string name="thanks">Thanks</string>
-    <string name="thanks_1">FengGo</string>
-    <string name="thanks_1_desc">Package Tracker Project</string>
-    <string name="thanks_1_url">https://github.com/fython/PackageTracker</string>
-    <string name="thanks_2">+Youlun Zhai</string>
-    <string name="thanks_2_desc">Poster designer</string>
-    <string name="thanks_2_url">https://plus.google.com/+YoulunZhai</string>
     <string name="source_code">GitHub Source code</string>
-    <string name="source_code_desc">https://github.com/TonnyL/Espresso</string>
+    <string name="source_code_desc">https://github.com/Olejek88/AskMaster</string>
     <string name="support">Support</string>
     <string name="send_advices">Send advices</string>
-    <string name="mail_account">mailto:marktonymengyi@gmail.com</string>
-    <string name="mail_topic">Espresso Advices</string>
+    <string name="mail_account">mailto:shtrmvk@gmail.com</string>
+    <string name="mail_topic">AskMaster</string>
     <string name="send_advices_desc">Help me improve this app.</string>
-    <string name="donate">Donate</string>
-    <string name="donate_account">marktonymengyi@gmail.com</string>
-    <string name="donate_desc">Buy me a cup of coffee to keep me awake during my night coding sessions.</string>
-    <string name="donate_msg">Alipay account will be copied to clipboard. Launch Alipay and paste it to finish donating. Thanks for support!</string>
+    <string name="web_site">Web page</string>
+    <string name="web_site_link">http://askmaster.ru</string>
     <string name="set_end_time_error">Start time can not be same as end time.</string>
     <string name="notification_new_message">\"The package has a new message\"</string>
     <!--About end-->
