--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="nav_switch_theme">Day/Night Mode</string>
     <string name="nav_settings">Settings</string>
     <string name="nav_about">About</string>
+    <string name="message_no_write_permission">No write permission</string>
     <!--navigation drawer end-->
 
     <!--question list page-->
