--- a/app/src/main/res/values-RU/strings.xml
+++ b/app/src/main/res/values-RU/strings.xml
@@ -88,6 +88,8 @@
     <string name="add_question">Добавить вопрос</string>
     <!--add question end-->
 
+    <string name="tint_trick_title">Совет</string>
+
     <!--user details-->
     <string name="profile_name">Ваше имя или никнейм</string>
     <string name="profile_city">Город или локация</string>
